--- a/doxygen docs/html/doxygen_crawl.html
+++ b/doxygen docs/html/doxygen_crawl.html
@@ -9,11 +9,15 @@
 </head>
 <body>
 <a href="tetris_game_8h_source.html"/>
+<a href="tetris_leveling_8h_source.html"/>
 <a href="tetris_scoring_8h_source.html"/>
 <a href="tetris_start_menu_8h_source.html"/>
+<a href="user_oled_8h_source.html"/>
 <a href="tetris_game_8c.html"/>
+<a href="tetris_leveling_8c.html"/>
 <a href="tetris_scoring_8c.html"/>
 <a href="tetris_start_menu_8c.html"/>
+<a href="user_oled_8c.html"/>
 <a href="struct_t_e_t_r_a_m_i_n_o___a_t_m.html"/>
 <a href="struct_t_e_t_r_a_m_i_n_o___a_t_m-members.html"/>
 <a href="dir_54cd7ad76c551360a10205b5b3e0d3fb.html"/>
@@ -30,6 +34,7 @@
 <a href="globals.html"/>
 <a href="globals.html"/>
 <a href="globals.html"/>
+<a href="globals.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
@@ -37,5 +42,7 @@
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
+<a href="globals_func.html"/>
+<a href="globals_vars.html"/>
 </body>
 </html>
