doxygen main page and date

--- a/doxygen docs/html/doxygen_crawl.html
+++ b/doxygen docs/html/doxygen_crawl.html
@@ -35,6 +35,12 @@
 <a href="globals.html"/>
 <a href="globals.html"/>
 <a href="globals.html"/>
+<a href="globals.html"/>
+<a href="globals.html"/>
+<a href="globals.html"/>
+<a href="globals_func.html"/>
+<a href="globals_func.html"/>
+<a href="globals_func.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
@@ -44,5 +50,6 @@
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
 <a href="globals_vars.html"/>
+<a href="globals_enum.html"/>
 </body>
 </html>
