--- a/doxygen docs/html/doxygen_crawl.html
+++ b/doxygen docs/html/doxygen_crawl.html
@@ -38,6 +38,10 @@
 <a href="globals.html"/>
 <a href="globals.html"/>
 <a href="globals.html"/>
+<a href="globals.html"/>
+<a href="globals.html"/>
+<a href="globals_func.html"/>
+<a href="globals_func.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
 <a href="globals_func.html"/>
