--- a/doxygen docs/html/tetris_scoring_8c.html
+++ b/doxygen docs/html/tetris_scoring_8c.html
@@ -84,7 +84,7 @@ $(function() {
 
 <p>: Program for Tetris Scoring system  
 <a href="#details">More...</a></p>
-<div class="textblock"><code>#include &quot;../tetrisGame/tetrisScoring.h&quot;</code><br />
+<div class="textblock"><code>#include &quot;tetrisScoring.h&quot;</code><br />
 <code>#include &quot;ssd1306_fonts.h&quot;</code><br />
 <code>#include &quot;ssd1306.h&quot;</code><br />
 <code>#include &lt;stdio.h&gt;</code><br />
