--- a/doxygen docs/html/tetris_leveling_8c.html
+++ b/doxygen docs/html/tetris_leveling_8c.html
@@ -85,7 +85,8 @@ $(function() {
 
 <p>: Program for Tetris Leveling system  
 <a href="#details">More...</a></p>
-<div class="textblock"><code>#include &quot;../tetrisGame/tetrisLeveling.h&quot;</code><br />
+<div class="textblock"><code>#include &quot;tetrisLeveling.h&quot;</code><br />
+<code>#include &quot;tetrisGame.h&quot;</code><br />
 </div><table class="memberdecls">
 <tr class="heading"><td colspan="2"><h2 class="groupheader"><a id="func-members" name="func-members"></a>
 Functions</h2></td></tr>
